--- a/documentation/NotoSansSyriacWestern.article.html
+++ b/documentation/NotoSansSyriacWestern.article.html
@@ -1,9 +1,9 @@
 <p>
-  Noto Sans Syriac is an unmodulated (“sans serif”) Estrangela design for texts in the
+  Noto Sans Syriac Western is an unmodulated (“sans serif”) Western (Serṭā) design for texts in the
   Middle Eastern <em>Syriac</em> script.
 </p>
 <p>
-  Noto Sans Syriac contains 288 glyphs, 19 OpenType features, and supports 150
+  Noto Sans Syriac Western contains 296 glyphs, 19 OpenType features, and supports 150
   characters from 5 Unicode blocks: Syriac, Arabic, Basic Latin, Combining
   Diacritical Marks, Latin-1 Supplement.
 </p>
