deploy: 11c7d5208e347bf59e1064253d3ec5916c1c2314

--- a/fontbakery/googlefonts-NotoSansSyriacWestern-report.html
+++ b/fontbakery/googlefonts-NotoSansSyriacWestern-report.html
@@ -279,8 +279,8 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Western' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Detect any interpolation issues in the font.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/interpolation_issues&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansSyriacWestern/googlefonts/variable-ttf/NotoSansSyriacWestern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour order differs in glyph 'uni0715.fina.qr': [0, 1, 2] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fd687f92f90&gt;, [0, 2, 1] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fd6888af7d0&gt;.</p>
-<pre><code>- And Contour order differs in glyph 'uni072F.qr': [0, 1, 2, 3] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fd687f92f90&gt;, [3, 1, 2, 0] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fd6888af7d0&gt;. [code: interpolation-issues]
+<details><summary>⚠️ <strong>fonts/NotoSansSyriacWestern/googlefonts/variable-ttf/NotoSansSyriacWestern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour order differs in glyph 'uni0715.fina.qr': [0, 1, 2] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f456e619350&gt;, [0, 2, 1] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f456e619490&gt;.</p>
+<pre><code>- And Contour order differs in glyph 'uni072F.qr': [0, 1, 2, 3] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f456e619350&gt;, [3, 1, 2, 0] in &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f456e619490&gt;. [code: interpolation-issues]
 </code></pre>
 </span></li></ul></div></details>
 <h2>&lt;Section: fontbakery.profiles.os2&gt; 🔥🔥⏩⏩⏩⏩</h2>
