--- a/fontbakery/googlefonts-NotoSansSyriac-report.html
+++ b/fontbakery/googlefonts-NotoSansSyriac-report.html
@@ -272,12 +272,12 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Thin' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Detect any interpolation issues in the font.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/interpolation_issues&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansSyriac/googlefonts/variable-ttf/NotoSansSyriac[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 1 start point differs in glyph 'uni072B' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc3702ad90&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc37028890&gt;</p>
-<pre><code>- Contour 1 start point differs in glyph 'uni072B.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc3702ad90&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc37028890&gt;
+<details><summary>⚠️ <strong>fonts/NotoSansSyriac/googlefonts/variable-ttf/NotoSansSyriac[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 1 start point differs in glyph 'uni072B' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6210&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6390&gt;</p>
+<pre><code>- Contour 1 start point differs in glyph 'uni072B.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6210&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6390&gt;
 
-- Contour 1 start point differs in glyph 'uni072B.medi' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc3702ad90&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc37028890&gt; 
+- Contour 1 start point differs in glyph 'uni072B.medi' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6210&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6390&gt; 
 
-- And Contour 1 start point differs in glyph 'uni072B.init' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc3702ad90&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7fcc37028890&gt; [code: interpolation-issues]
+- And Contour 1 start point differs in glyph 'uni072B.init' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6210&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f512ecc6390&gt; [code: interpolation-issues]
 </code></pre>
 </span></li></ul></div></details>
 <h2>&lt;Section: fontbakery.profiles.os2&gt; 🔥🔥⏩⏩⏩⏩</h2>
