--- a/fontbakery/googlefonts-NotoSansSyriacEastern-report.html
+++ b/fontbakery/googlefonts-NotoSansSyriacEastern-report.html
@@ -279,7 +279,7 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Eastern' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Detect any interpolation issues in the font.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/interpolation_issues&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansSyriacEastern/googlefonts/variable-ttf/NotoSansSyriacEastern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 2 start point differs in glyph 'uni0723.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f9bc4a88f90&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f9bc4c5e890&gt; [code: interpolation-issues]</p>
+<details><summary>⚠️ <strong>fonts/NotoSansSyriacEastern/googlefonts/variable-ttf/NotoSansSyriacEastern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 2 start point differs in glyph 'uni0723.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f172dec6090&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f172d724510&gt; [code: interpolation-issues]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: fontbakery.profiles.os2&gt; 🔥🔥⏩⏩⏩⏩</h2>
 <h3>Fonts have consistent PANOSE proportion?</h3>
